data/derived/fa15/progs/unify/prog0470.ml.out
Characters 60-73:
  else n mod 10 :: digitsOfInt n / 10;;
                   ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
